                      (it now contains 'ButtonMenuItemProxy' instances).
                    - The methods '_populate_header_filters_for_*()' have been removed.
            * Activities :
                - The content of the class attribute 'populate.Populator.BUTTONS' has changed
                  (it now contains 'ButtonMenuItem' instances).
            * Billing :
               - The class 'actions.ExportAction' has been renamed '_ExportAction'.
               - These methods of 'populate.Populator' have been removed :
                    - _populate_buttons_config_for_*()
                    - _create_header_filter_for_line()
                    - _populate_header_filters_for_*()
               - The module 'views.convert' has been renamed "conversion".
            * Commercial :
                - The methods 'populate.Populator._populate_header_filters_for_*()' have been removed.
            * Emails :
                - These Brick classes are not registered anymore (so they can only be reloaded by their specific view):
                  SendingBrick, SendingHTMLBodyBrick, MailsBrick.
                - The class attribute 'views.sending.SendingBricksReloading.allowed_bricks'
                  has been replaced by the new attribute 'bricks'.
            * CTI :
                - The class bricks.CallersBrick is not registered anymore (so it can only be reloaded by its specific view).
            * SMS :
                - The class 'bricks.MessagingListsBlock' has been renamed 'MessagingListsBrick'.

    Internal breaking changes :
    ---------------------------
    (they should not cause problem if you have not deeply modified the source code of Creme)

        # In the class 'creme_core.gui.button_menu.ButtonRegistry', the methods
          'get_buttons()' & 'mandatory_buttons()' get keywords arguments only now,
          an get a new mandatory argument "request".